--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,11 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'Inject copyright'
+description: 'Inject copyright info into html, css and js files in your dist folder.'
+author: 'Bendy Zhang'
 inputs:
-  milliseconds: # change this
-    required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+  dist:
+    required: false
+    description: 'your dist folder, default is dist folder in root'
+    default: 'dist'
 runs:
   using: 'node12'
   main: 'dist/index.js'
