--- a/package.json
+++ b/package.json
@@ -27,23 +27,22 @@
   "author": "Bendy Zhang",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.2.6",
-    "shelljs": "^0.8.4"
+    "@actions/core": "^1.10.0",
+    "shelljs": "^0.8.5"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.9",
-    "@types/shelljs": "^0.8.8",
-    "@typescript-eslint/parser": "^3.10.1",
-    "@vercel/ncc": "^0.23.0",
-    "eslint": "^7.14.0",
-    "eslint-plugin-github": "^4.1.1",
-    "eslint-plugin-jest": "^23.20.0",
-    "jest": "^24.9.0",
-    "jest-circus": "^26.6.3",
-    "js-yaml": "^3.14.0",
-    "prettier": "2.3.2",
-    "ts-jest": "^24.3.0",
-    "typescript": "^4.1.2"
+    "@types/jest": "^29.5.3",
+    "@types/node": "^18.16.3",
+    "@types/shelljs": "^0.8.12",
+    "@typescript-eslint/parser": "^5.59.2",
+    "@vercel/ncc": "^0.36.1",
+    "eslint": "^8.39.0",
+    "eslint-plugin-github": "4.7.0",
+    "eslint-plugin-jest": "^27.2.1",
+    "jest": "^29.5.0",
+    "js-yaml": "^4.1.0",
+    "prettier": "^2.8.8",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.4"
   }
 }
